# monotone-xi-curvature

./: README.md
monotone-xi-curvature/: README.md  pyproject.toml  requirements.txt
monotone-xi-curvature/experiments/: reproduce_tables.py  scan_K3.py  verify_D1_euler.py  verify_K4_strip.py
monotone-xi-curvature/paper/: one_page_article.md
monotone-xi-curvature/src/monotone_xi_curvature/: __init__.py  compact_strip.py  derivatives.py  euler_region.py  stieltjes_gate.py  xi.py
monotone-xi-curvature/tests/: test_basic.py  test_signs.py
