[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monotone-xi-curvature"
version = "0.1.0"
description = "Numerical support code for monotone curvature decay of the completed Riemann function"
requires-python = ">=3.10"
dependencies = ["mpmath>=1.3.0"]

[tool.setuptools.packages.find]
where = ["src"]
